--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@liaoliaots/nestjs-redis": "^10.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.3",
@@ -27,6 +28,7 @@
     "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/websockets": "^11.1.3",
     "@types/socket.io-client": "^1.4.36",
+    "ioredis": "^5.6.1",
     "nestjs-redis": "^1.3.3",
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
