--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.12",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
     "socket.io-client": "^4.8.1"
@@ -23,6 +24,7 @@
     "@types/node": "^20.11.18",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
+    "@types/react-helmet": "^6.1.11",
     "@types/socket.io-client": "^1.4.36",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
