--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/websockets": "^11.1.3",
     "@types/socket.io-client": "^1.4.36",
+    "chess.js": "^1.4.0",
     "ioredis": "^5.6.1",
     "nestjs-redis": "^1.3.3",
     "redis": "^5.5.6",
@@ -43,6 +44,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/chess.js": "^0.13.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
