--- a/turn-server/package.json
+++ b/turn-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": { 
     "start": "node server.js",
-    "build": "echo 'No build required' && exit 0",
+    "build": "npm install && exit 0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
