--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "chess.js": "^1.4.0",
     "chessboardjsx": "^2.4.7",
+    "http": "^0.0.1-security",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
