--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,24 +10,39 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
+    "boardgame.io": "^0.50.2",
     "chess.js": "^1.4.0",
     "chessboardjsx": "^2.4.7",
+    "classnames": "^2.5.1",
     "http": "^0.0.1-security",
     "lucide-react": "^0.441.0",
+    "ludo": "^2.0.0",
+    "random-js": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.12",
     "react-helmet": "^6.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
+    "redux": "^5.0.1",
+    "redux-batched-actions": "^0.5.0",
+    "redux-saga": "^1.3.0",
+    "reselect": "^5.1.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
+    "@types/classnames": "^2.3.0",
     "@types/node": "^20.11.18",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@types/react-helmet": "^6.1.11",
+    "@types/react-redux": "^7.1.34",
+    "@types/redux": "^3.6.31",
+    "@types/redux-saga": "^0.9.31",
+    "@types/reselect": "^2.0.27",
     "@types/socket.io-client": "^1.4.36",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
