--- a/turn-server/package.json
+++ b/turn-server/package.json
@@ -17,7 +17,11 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "node-turn": "^0.0.6"
   },
   "engines": {
