--- a/backend/package.json
+++ b/backend/package.json
@@ -22,14 +22,23 @@
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/websockets": "^11.1.3",
+    "@types/mongoose": "^5.11.96",
     "@types/socket.io-client": "^1.4.36",
+    "bcryptjs": "^2.4.3",
     "chess.js": "^1.4.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "ioredis": "^5.6.1",
+    "mongoose": "^8.18.0",
     "nestjs-redis": "^1.3.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -44,10 +53,12 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/bcryptjs": "^2.4.6",
     "@types/chess.js": "^0.13.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/passport-jwt": "^4.0.1",
     "@types/prop-types": "^15.7.15",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
