--- a/backend/package.json
+++ b/backend/package.json
@@ -43,7 +43,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "@google/generative-ai": "^0.20.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
