--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.9.2",
     "axios": "^1.11.0",
     "boardgame.io": "^0.50.2",
     "chess.js": "^1.4.0",
